--- a/.github/workflows/avaxmas.yml
+++ b/.github/workflows/avaxmas.yml
@@ -19,3 +19,7 @@ jobs:
       - name: test
         run: |
           yarn hardhat test
+
+      - name: local-deploy
+        run: |
+          yarn hardhat deploy
